tests/compilefail66.out
[1mtests/compilefail66.pas:8:1: [0m[1m[91merror:[0m Function x has invalid return type: q
     8 | function x(a:integer):q;